2007-04-24  Wakaba  <wakaba@suika.fam.cx>

	* ContentType.pm: Documentation is added.

2007-04-24  Wakaba  <wakaba@suika.fam.cx>

	* ContentType.pm: New Perl module.

	* ChangeLog: New file.

