@@ -1,5 +1,9 @@
 2007-04-24  Wakaba  <wakaba@suika.fam.cx>
 
+	* ContentType.pm: An error in pod is fixed.
+
+2007-04-24  Wakaba  <wakaba@suika.fam.cx>
+
 	* ContentType.pm: Documentation is added.
 
 2007-04-24  Wakaba  <wakaba@suika.fam.cx>
